# upset-alt-txt-gen

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  structured.json  tox.ini
.github/workflows/: publish-to-test-pypi.yml  release-to-pypi.yml  tests.yml
data/: Text_data.csv  agg_test.json  bad.json  bad_agg_test.json  cancer_degree_sort.json  cancer_size_sort.json  covid.json  covid_multiple_dominant_sets.json  feature_degree.json  feature_degree_sort.json  grammar.json  metabolism_data_size_sort.json  metabolomics_size_sort.json  movie.json  movie2.json  movie_data_card_sort.json  movie_data_degree_agg.json  movie_data_degree_sort.json  movie_data_dev_sort.json  movie_data_deviation_agg.json  movie_data_size_sort.json  movie_grammar.json  movies_2.json  movies_set_query_test.json  movies_updated_v0.2.8.json  movies_updated_v0.3.0.json  movies_with_bookmarks_selection.json  p11_down_size.json  p11_up_degree.json  p14_size_sort.json  phrases.json  rawdata.json  setdata.json  simpson.json  simpson_grammar.json  simpsons_data_size_sort.json  simpsons_size_sort_v0.2.7.json  upset_state_data_2024-09-10(1).json  upset_state_data_2024-09-10(2).json  upset_state_data_2024-09-10(3).json  (+5 more)
src/: data.json  simpsons.json  test.json
src/alttxt/: __main__.py  enums.py  generator.py  generic.py  glossary.py  main.py  models.py  parser.py  phrases.py  regionclass.py  run_client.sh  run_server.sh  tokenmap.py  types.py  types_.py  webapi.py  webapp.py
src/alttxt/templates/: index.html
tests/: alttxt api test.bat  alttxt level test.bat  test_alttxt.py
