[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=alttxt"
testpaths = [
  "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = false
warn_unused_configs = true
no_implicit_reexport = true

[tool.poetry]
name = "upset-alttxt"
version = "1.0.0"
description = "Generates alt text for UpSet plots"
authors = ["Nate Lanza", "Filemon Mateus"]
readme = "README.md"