[build-system]
requires = ["setuptools==68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=alttxt"
testpaths = [
  "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = false
warn_unused_configs = true
no_implicit_reexport = true

[project]
name = "upset-alttxt"
version = "0.4.3"
description = "Generates alt text for UpSet plots"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy>=2.1.1", "scipy>=1.14.1", "pydantic>=2.9.1"]
