[metadata]
name = alttxt
description = An UpSet Plot Alternative Text Generator
author = Visualization Design Lab
license = BSD3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

[options]
packages =
  alttxt
install_requires =
  enum34>=1.0
  numpy>=1.24
  pydantic>=1.0
  pyupset>=0.1
  pdfrw2>=0.5
python_requires = >=3.10
package_dir =
  =src
zip_safe = no

[options.extras_require]
testing =
  flake8>=4.0
  mypy>=1.0
  pytest>=6.0
  pytest-cov>=2.0
  tox>=4.0

[options.package_data]
alttxt = py.typed

[flake8]
max-line-length = 160
